# backpropagation-melanoma

./: .gitignore  CMakeLists.txt  main.cpp  utils.cpp
entities/HiddenLayer/: HiddenLayer.cpp  HiddenLayer.h
entities/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkArgs.h
utilities/: utils.cpp  utils.h
utilities/singleton/: NeuralNetworkContext.cpp  NeuralNetworkContext.h
